# hotpath-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  run_loadtest.sh
.github/workflows/: ci-macos.yml  ci-windows.yml  ci.yml  hotpath-comment.yml  hotpath-profile.yml
crates/hotpath/: Cargo.toml
crates/hotpath-macros/: Cargo.toml
crates/hotpath-macros/src/: lib.rs  lib_on.rs
crates/hotpath/src/: http_server.rs  json.rs  lib.rs  lib_off.rs  lib_on.rs  mcp_server.rs  metrics_server.rs  output.rs  output_on.rs  tid.rs
crates/hotpath/src/lib_on/: channels.rs  functions.rs  functions_alloc.rs  functions_timing.rs  futures.rs  streams.rs  tasks.rs  threads.rs
crates/hotpath/src/lib_on/alloc/: core.rs  guard.rs  report.rs  state.rs
crates/hotpath/src/lib_on/channels/: channels_guard.rs  guard.rs  stream_wrappers.rs  wrapper.rs  wrappers.rs
crates/hotpath/src/lib_on/channels/wrapper/: common.rs  crossbeam.rs  ftc.rs  std.rs  tokio.rs
crates/hotpath/src/lib_on/channels/wrappers/: crossbeam.rs  futures.rs  std.rs  tokio.rs
crates/hotpath/src/lib_on/functions/: alloc.rs  guard.rs  timing.rs
crates/hotpath/src/lib_on/functions/alloc/: allocator.rs  core.rs  guard.rs  report.rs  shared.rs  state.rs
crates/hotpath/src/lib_on/functions/timing/: guard.rs  report.rs  state.rs
crates/hotpath/src/lib_on/futures/: wrapper.rs
crates/hotpath/src/lib_on/streams/: guard.rs
crates/hotpath/src/lib_on/tasks/: guard.rs  wrapper.rs
crates/hotpath/src/lib_on/threads/: collector_linux.rs  collector_macos.rs
crates/hotpath/src/lib_on/time/: guard.rs  report.rs  state.rs
crates/hotpath/tests/: channels_crossbeam.rs  channels_ftc.rs  channels_futures.rs  channels_std.rs  channels_tokio.rs  functions.rs  futures.rs  hotpath_integration.rs  streams.rs  tasks.rs  threads.rs
crates/test-all-features/: Cargo.toml
crates/test-all-features/examples/: basic_all_features.rs
crates/test-channels-crossbeam/: Cargo.toml
crates/test-channels-crossbeam/examples/: basic_crossbeam.rs  basic_json_crossbeam.rs  closed_crossbeam.rs  console_feed_crossbeam.rs  iter_crossbeam.rs  slow_consumer_crossbeam.rs
crates/test-channels-ftc/examples/: basic_json_ftc.rs
crates/test-channels-futures/: Cargo.toml
crates/test-channels-futures/examples/: basic_futures.rs  basic_json_futures.rs  closed_futures.rs  console_feed_futures.rs  iter_futures.rs  oneshot_closed_futures.rs  slow_consumer_futures.rs
crates/test-channels-std/: Cargo.toml
crates/test-channels-std/examples/: basic_json_std.rs  basic_std.rs  closed_std.rs  console_feed_std.rs  iter_std.rs  slow_consumer_std.rs  test_macro_order.rs
crates/test-channels-tokio/: Cargo.toml
crates/test-channels-tokio/examples/: basic_json_tokio.rs  basic_tokio.rs  closed_tokio.rs  console_feed_tokio.rs  iter_tokio.rs  oneshot_closed_tokio.rs  slow_consumer_tokio.rs
crates/test-futures/: Cargo.toml
crates/test-futures/examples/: basic.rs  basic_tasks.rs
crates/test-smol-async/: Cargo.toml
crates/test-smol-async/examples/: basic_smol.rs
crates/test-streams/: Cargo.toml
crates/test-streams/examples/: basic_streams.rs
crates/test-tasks/: Cargo.toml
crates/test-tasks/examples/: basic_tasks.rs  future_attr.rs  iter_tasks.rs
crates/test-tokio-async/: Cargo.toml
crates/test-tokio-async/examples/: async_multithread.rs  basic.rs  benchmark.rs  csv_file_reporter.rs  custom_guard.rs  early_returns.rs  fibonacci.rs  fibonacci_alloc.rs  guard_timeout.rs  json_file_reporter.rs  limit.rs  long_running.rs  main_empty.rs  main_format.rs  main_percentiles.rs  main_percentiles_format.rs  main_timeout.rs  measure_all_impl.rs  measure_all_mod.rs  multithread_alloc.rs  no_op_block.rs  profile_async_io.rs  profile_async_io_long.rs  profile_blocking_io.rs  profile_cpu.rs  tracing_reporter.rs  unit_test.rs
