[workspace]
members = [
    "crates/hotpath-macros",
    "crates/hotpath",
    "crates/test-tokio-async",
    "crates/test-smol-async",
    "crates/test-all-features",
    "crates/test-channels-crossbeam",
    "crates/test-channels-ftc",
    "crates/test-channels-std",
    "crates/test-streams",
    "crates/test-channels-tokio",
    "crates/test-futures",
]
resolver = "2"

[workspace.dependencies]
hotpath-macros = { path = "./crates/hotpath-macros", version = "0.9.2" }
hotpath = { path = "./crates/hotpath", version = "0.9.3" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[profile.profiling]
inherits = "release"
debug = true

