[package]
name = "hotpath-macros"
version = "0.9.1"
edition = "2021"
repository = "https://github.com/pawurb/hotpath"
description = "Simple Rust profiler with memory and async data-flow insights - quickly find and debug performance bottlenecks. Proc macros crate for hotpath-rs."
readme = "../../README.md"
license = "MIT"
categories = ["development-tools"]

[features]
default = []
hotpath = ["dep:proc-macro2", "dep:quote", "dep:syn"]
hotpath-off = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
syn = { workspace = true, optional = true }
