[package]
name = "hotpath"
version = "0.7.5"
edition = "2021"
repository = "https://github.com/pawurb/hotpath"
description = "Rust performance debug toolkit. Live profiling for allocations, timings, threads, and channel/stream data flows."
readme = "../../README.md"
license = "MIT"
categories = ["development-tools"]

[[bin]]
name = "hotpath"
path = "bin/main.rs"

[features]
default = ["threads"]
hotpath = ["hotpath-macros/hotpath", "hotpath-macros/hotpath-off"]
hotpath-alloc = ["dep:tokio"]
hotpath-off = []
tui = ["dep:crossterm", "dep:ratatui", "dep:chrono"]
tokio = ["dep:tokio", "tokio/sync", "tokio/macros", "tokio/time", "tokio/rt-multi-thread"]
futures = ["dep:tokio", "tokio/sync", "tokio/macros", "tokio/time", "tokio/rt-multi-thread", "dep:futures-channel"]
crossbeam = []
threads = []  

[dependencies]
arc-swap = "1.7"
base64 = "0.22"
cfg-if = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = { version = "3" }
crossbeam-channel = "0.5"
crossterm = { version = "0.29", optional = true }
eyre = "0.6"
hdrhistogram = { version = "7.5", default-features = false }
hotpath-macros = { workspace = true }
prettytable-rs = { version = "0.10", default-features = false }
quanta = "0.12"
ratatui = { version = "0.29", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
tokio = { version = "1", features = ["rt"], optional = true }
ureq = { version = "3.1", features = ["json"] }
futures-channel = { version = "0.3", features = ["sink"], optional = true }
futures-util = { version = "0.3", features = ["sink"] }
pin-project-lite = "0.2"
regex = "1"
chrono = { version = "0.4", optional = true }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.6"
