[package]
name = "test-all-features"
version = "0.0.0"
publish = false
edition = "2021"

[features]
default = ['hotpath']
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-off = ["hotpath/hotpath-off"]

[dependencies]
hotpath = { path = "../hotpath", optional = true, features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
