[package]
name = "test-tokio-async"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
hotpath = { path = "../hotpath", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
rand = "0.8"

[features]
default = []
hotpath = ["hotpath/hotpath"]
hotpath-alloc-bytes-total = ["hotpath/hotpath-alloc-bytes-total"]
hotpath-alloc-count-total = ["hotpath/hotpath-alloc-count-total"]
hotpath-off = ["hotpath/hotpath-off"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "async_multithread"
path = "examples/async_multithread.rs"

[[example]]
name = "main_empty"
path = "examples/main_empty.rs"

[[example]]
name = "main_format"
path = "examples/main_format.rs"

[[example]]
name = "main_percentiles"
path = "examples/main_percentiles.rs"

[[example]]
name = "main_percentiles_format"
path = "examples/main_percentiles_format.rs"

[[example]]
name = "early_returns"
path = "examples/early_returns.rs"

[[example]]
name = "custom_guard"
path = "examples/custom_guard.rs"

[[example]]
name = "unit_test"
path = "examples/unit_test.rs"

[[example]]
name = "unsupported_async"
path = "examples/unsupported_async.rs"

[[example]]
name = "csv_file_reporter"
path = "examples/csv_file_reporter.rs"

[[example]]
name = "tracing_reporter"
path = "examples/tracing_reporter.rs"

[[example]]
name = "json_file_reporter"
path = "examples/json_file_reporter.rs"

[[example]]
name = "main_timeout"
path = "examples/main_timeout.rs"

[[example]]
name = "guard_timeout"
path = "examples/guard_timeout.rs"

[[example]]
name = "long_running"
path = "examples/long_running.rs"
